--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=zuul
 server.port=8011
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+
+api.h2console.url.path = /users-app/h2-console/**
+api.registration.url.path = /users-app/users
+api.login.url.path = /users-app/user/login
+
+authorization.token.header.name =Authorization
+authorization.token.header.prefix =Bearer
+token.secret =hfgry463hf746hf573ydh475fhy5739
